# cipher-box

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  00_START_HERE.md  CHANGELOG.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PRD.md  README.md  cipherbox-test.txt  codecov.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.claude/: claude.md  settings.json  settings.local.json
.entire/: settings.json
.github/: copilot-instructions.md
.husky/: pre-commit
.learnings/: 2026-02-07-atomic-file-upload.md  2026-02-07-empty-state-upload-regression.md  2026-02-07-ipns-resolve-db-fallback.md  2026-02-07-parallel-bugfix-agents.md  2026-02-07-phase8-tee-integration.md  2026-02-07-rust-typescript-data-model-fidelity.md  2026-02-07-upload-modal-lifecycle.md  2026-02-08-desktop-testing-strategy.md  2026-02-08-fuse-t-nfs-macos.md  2026-02-08-macos-system-integration.md  2026-02-08-replace-esm-only-ipns-with-inline-protobuf.md  2026-02-08-tauri-webview-lifecycle.md  2026-02-09-gsd-quick-must-use-feature-branches.md  2026-02-09-pencil-mcp-multi-screen-design.md  2026-02-09-staging-deployment-first-deploy.md  2026-02-09-vault-sync-loading-state.md  2026-02-10-pr-review-comment-workflow.md  2026-02-10-use-pnpm-not-npm.md  2026-02-11-never-bypass-gpg-signing.md  2026-02-13-grafana-loki-token-scopes-and-staging-fixes.md  2026-02-13-phase12-corekit-identity-provider.md  2026-02-15-phase-12.4-mfa-cross-device.md  2026-02-16-ephemeral-jwks-web3auth-caching.md  2026-02-16-useCallback-state-dependency-oscillation.md  2026-02-18-fuse-t-smb-backend-and-fuser-socket-patch.md  2026-02-21-metadata-schema-evolution-protocol.md  2026-02-21-phase14-user-to-user-sharing.md  2026-02-22-staging-migration-missing-create-table.md  README.md
.pencil/: cipher-box-design.pen
.planning/: ENVIRONMENTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  mvp-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
Documentation/: API_SPECIFICATION.md  CLIENT_SPECIFICATION.md  CipherBox_PRD.md  CipherBox_v1.0_PRD.md  DATA_FLOWS.md  IMPLEMENTATION_ROADMAP.md  PRD.md  TECHNICAL_ARCHITECTURE.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  generate-test-vectors.mjs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/pkg-config/: fuse.pc
apps/desktop/src-tauri/src/: commands.rs  main.rs  state.rs
apps/desktop/src-tauri/src/api/: auth.rs  client.rs  ipfs.rs  ipns.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/crypto/: aes.rs  aes_ctr.rs  ecies.rs  ed25519.rs  folder.rs  hkdf.rs  ipns.rs  mod.rs  tests.rs  utils.rs
apps/desktop/src-tauri/src/fuse/: cache.rs  file_handle.rs  inode.rs  mod.rs  operations.rs
apps/desktop/src-tauri/src/registry/: mod.rs  types.rs
apps/desktop/src-tauri/src/sync/: mod.rs  queue.rs  tests.rs
apps/desktop/src-tauri/src/tray/: mod.rs  status.rs
designs/: DESIGN.md  (+1 more)
(+2109 files in other folders)
